part2/ex110/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hash-app-service
spec:
  type: ClusterIP
  selector:
    app: hash-gen-read-http
  ports:
  - port: 8367
    protocol: TCP
    targetPort: 8083
