part2/ex110/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hash-app-ingress
  labels:
      name: hash-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: hash-app-service
          servicePort: 8367
